style.scss
/* ... */
@font-face { font-family: "InterDisplay"; font-style: italic; font-weight: 600; font-display: swap; src: url("/fonts/Inter/InterDisplay-SemiBoldItalic.woff2") format("woff2"); }
@font-face { font-family: "InterDisplay"; font-style: normal; font-weight: 700; font-display: swap; src: url("/fonts/Inter/InterDisplay-Bold.woff2") format("woff2"); }
@font-face { font-family: "InterDisplay"; font-style: italic; font-weight: 700; font-display: swap; src: url("/fonts/Inter/InterDisplay-BoldItalic.woff2") format("woff2"); }
@font-face { font-family: "InterDisplay"; font-style: normal; font-weight: 800; font-display: swap; src: url("/fonts/Inter/InterDisplay-ExtraBold.woff2") format("woff2"); }
@font-face { font-family: "InterDisplay"; font-style: italic; font-weight: 800; font-display: swap; src: url("/fonts/Inter/InterDisplay-ExtraBoldItalic.woff2") format("woff2"); }
@font-face { font-family: "InterDisplay"; font-style: normal; font-weight: 900; font-display: swap; src: url("/fonts/Inter/InterDisplay-Black.woff2") format("woff2"); }
@font-face { font-family: "InterDisplay"; font-style: italic; font-weight: 900; font-display: swap; src: url("/fonts/Inter/InterDisplay-BlackItalic.woff2") format("woff2"); }


/**************************************
    $CRITICAL CSS
/**************************************/
* {
  text-rendering: optimizeLegibility;
  font-kerning: auto;
}

html {
  font-family: sans-serif;
  -webkit-text-size-adjust: 100%;
}

body {
    -webkit-font-smoothing: antialiased;
    background: #ffffff;
    color: #111;
    counter-reset: sidenote-counter;
    font: 1.4rem/2rem "et-book", Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
    height: 100%;
    margin: 0 auto;
    max-width: 1440px;
    padding-left: 12.5%;
    padding-top: 5rem;
    width: 87.5%;
}

h1,h2,h3,h4,h5,h6 {
    font-style: italic;
    font-weight: normal;
    line-height: 1;
    margin: 0;
    text-transform: capitalize;
}
h1 { font-size: 3.2rem; font-style: normal; margin-top: 2.6rem; }
h2 { font-size: 2.2rem; margin-top: 4.2rem; }
h3 { font-size: 1.7rem; margin-top: 2.6rem; }

p,table,blockquote,pre,img,hr,.mini-note,ul li,ol li {
    box-sizing: border-box;
    max-width: 55%;
}

.MathJax_SVG_Display {
    max-width: 55% !important;
}

li ul li, li ol li {
    max-width: 100%;
}

p {
    position: relative;
}

a,a:visited {
    color: #111;

    &:hover {
        color: rgb(220, 40, 40);
    }
}

blockquote {
    font-style: italic;
    margin: 0;
    padding: 2rem 0 2rem 4rem;
}

blockquote footer {
    font-style: normal;
    font-size: 1.1rem;
    text-align: right;
}

figure {
    align-items: flex-start;
    display: flex;
    margin: 0;
    padding: 0;
    position: relative;
}

hr {
    background: #111;
    border: 0;
    height: 1px;
    margin: 4rem 0;
    width: 100%;
}

pre {
    font-size: 80%;
    margin: 0;
    padding: 1rem;
    overflow-x: auto;
}

code {
    font-size: 80%;
}

img {
    height: auto;
    margin-right: 4rem;
    width: 100%;
    -webkit-filter: drop-shadow(3px 3px 5px #808080);
    -moz-filter: drop-shadow(3px 3px 5px #808080);
    -ms-filter: drop-shadow(3px 3px 5px #808080); 
    -o-filter: drop-shadow(3px 3px 5px #808080);
    filter: drop-shadow(3px 3px 5px #808080);
}

.infopill {
  font: 1em "Inter", serif;
  background-color: #aaa;
  border: none;
  color: black;
  padding: 5px 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  margin: 2px;
  cursor: default;
  border-radius: 5px;
}

.goldpill {
  background-color: #ffd700;
  color: black;
}

.entry-publication,.entry-report,.entry-bookreview,.entry-bookchapter {
  font: 16px "Inter", sans-serif;
  border-left: solid thick navy;
  padding-left: 10px;
  margin: 15px auto;
  line-height: 100%;
}

.what {
  font-weight: 500;
}

.who {
  font-weight: 200;
}

.where {
  font-weight: 300;
}

.lookatme {
  font-weight: 300;
}

.preprint {
  font: 8px "Inter", sans-serif;
  font-weight: 500;
  border: solid thin #000;
  padding: 5px;
}

/**************************************
    $DEFAULT ELEMENTS
/**************************************/
table {
    border-collapse: separate;
    border-spacing: 1.5rem .5rem;
    margin: 0 6rem 0 -1.5rem;
    text-align: left;
    width: 100%;

    th, td {
        font-weight: bold;
        padding: 0;

        &:not(:first-child) {
            text-align: right;
        }
    }

    thead th {
        border-bottom: 1px solid #111;
    }
}

/**************************************
    $DEFAULT CLASSES
/**************************************/
/*p*/.subtitle {
    font-size: 1.8rem;
    font-style: italic;
}

/*p*/.sans {
    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
    letter-spacing: .03em;
}

/*span*/.caps {
    font-variant: small-caps;
}

/*span*/.italics {
    font-style: italic;
}

/*span*/.marginnote,
/*span*/.sidenote,
figcaption {
    font-size: 80%;
    left: calc(100% + 4rem);
    line-height: 1.3rem;
    max-width: 400px;
    padding-top: 1rem;
    position: absolute;
    top: 0;
    width: 50%;
}

/*span*/.sidenote {
    &:before {
        content: counter(sidenote-counter) " ";
        font-family: et-book-roman-old-style;
        position: relative;
        top: -0.5rem;
        vertical-align: baseline;
    }
}

/*span*/.sidenote-number {
    counter-increment: sidenote-counter;

    &:after {
        content: counter(sidenote-counter);
        font-family: et-book-roman-old-style;
        font-size: 80%;
        left: 0.1rem;
        position: relative;
        top: -0.5rem;
        vertical-align: baseline;
    }
}

figure {
    /*span*/.marginnote,
    /*span*/.sidenote,
    figcaption {
        left: auto;
        position: relative;
    }
}

/*span*/.mini-note {
    display: block;
    font-size: 80%;
    font-style: italic;
}
/* ... */

